# Instance-Manager

./: README.md
IM/: CMakeLists.txt  build_full_project.sh  compile.sh
IM/Test/: CMakeLists.txt  README.md  build_and_run.sh
IM/Test/src/: server_test.cpp  test_cases.cpp
IM/cmake/: PrecompiledHeader.cmake
IM/conf/: server.jsonc
IM/database/: alter_users.sql  schema.sql  sql.md
IM/include/server/: admin_service.h  file_service.h  message_service.h  notification_service.h  pch.h  push_notification_service.h  relation_service.h  server.h  user_service.h
IM/include/server/db/: mysql_connection.h  redis_client.h
IM/include/server/forward/: declarations.h  fix_includes.h
IM/include/server/temp/: server_fixed.h
IM/include/server/utils/: config.h
IM/proto/: service.proto
IM/src/server/: admin_service.cpp  file_service.cpp  main.cpp  message_service.cpp  notification_service.cpp  pch.h  push_notification_service.cpp  relation_service.cpp  server.cpp  user_service.cpp
IM/src/server/db/: mysql_connection.cpp  redis_client.cpp
IM/src/server/utils/: config.cpp
